@@ -2,9 +2,6 @@
 
 -Xms2g
 -Xmx2g
--XX:+UseConcMarkSweepGC
--XX:CMSInitiatingOccupancyFraction=75
--XX:+UseCMSInitiatingOccupancyOnly
 -Des.networkaddress.cache.ttl=60
 -Des.networkaddress.cache.negative.ttl=10
 -XX:+AlwaysPreTouch
